# rubiksSolver

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.cpp
core/: CMakeLists.txt  main.cpp
core/src/: CMakeLists.txt  cube.cpp  cube.h  node.cpp  node.h  search.cpp  search.h
core/src/cube/: cube.cpp  cube.h
core/src/search/: search.h
core/test/: CMakeLists.txt  test.cpp
cube/: CMakeLists.txt  cube.cpp  cube.h
frontend/: app.js  index.html  package-lock.json  package.json
search/: CMakeLists.txt  node.h  problem.h  search.h
src/cube/: cube.cpp  cube.h
src/search/: CMakeLists.txt  node.h
test/: CMakeLists.txt  test.cpp
